--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,18 @@
 body {
 	margin: 0 auto;
 	width: 900px;
+	color: white;
+	background: black;
 }
 img {
+	display: inline-block;
+	
+}
+ul {
 	display: block;
+}
+li {
+	display: inline-block;
 }
 a {
 
